--- a/views/index.ejs
+++ b/views/index.ejs
@@ -264,6 +264,7 @@
                         <li><a href="#" class="text-gray-400 hover:text-white">Portfolio</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-white">About</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="/user/login" class="text-gray-400 hover:text-white">Login</a></li>
                     </ul>
                 </div>
                 <div>
@@ -296,7 +297,6 @@
         <span>WhatsApp</span>
     </a>
     
-
     <script>
         new Glide('.glide', {
             type: 'carousel',
