--- a/views/components/ourServices.ejs
+++ b/views/components/ourServices.ejs
@@ -1,20 +1,20 @@
 <div class="max-w-8xl mx-auto px-4 sm:px-6 lg:px-8">           
     <h2 class="font-[Playfair Display] text-4xl font-bold text-center mb-16">Our Services</h2>
      <div class="grid grid-cols-1 md:grid-cols-3 gap-12">                
-       <div class="text-center">
-             <i class="fas fa-home text-4xl text-custom mb-6"></i>
+       <div class="text-center" style="box-shadow: 0 0 10px; padding: 10px;">
+             <i class="fas fa-home text-4xl mb-6"></i>
              <h3 class="text-xl font-semibold mb-4">Residential Design</h3>
-             <p class="text-gray-600">Transform your home into a personalized sanctuary with our expert residential design services.</p>                
+             <p>Transform your home into a personalized sanctuary with our expert residential design services.</p>                
            </div>
-         <div class="text-center">
-             <i class="fas fa-building text-4xl text-custom mb-6"></i>
+         <div class="text-center" style="box-shadow: 0 0 10px; padding: 10px;">
+             <i class="fas fa-building text-4xl mb-6"></i>
              <h3 class="text-xl font-semibold mb-4">Commercial Spaces</h3>
-             <p class="text-gray-600">Create impressive commercial environments that inspire productivity and success.</p>
+             <p>Create impressive commercial environments that inspire productivity and success.</p>
          </div>
-         <div class="text-center">                    
-           <i class="fas fa-tools text-4xl text-custom mb-6"></i>
+         <div class="text-center" style="box-shadow: 0 0 10px; padding: 10px;">                    
+           <i class="fas fa-tools text-4xl mb-6"></i>
              <h3 class="text-xl font-semibold mb-4">Renovation</h3>
-             <p class="text-gray-600">Breathe new life into existing spaces with our comprehensive renovation solutions.</p>                
-           </div>
+             <p>Breathe new life into existing spaces with our comprehensive renovation solutions.</p>                
+          </div>
      </div>
  </div>
