--- a/views/components/contactUs.ejs
+++ b/views/components/contactUs.ejs
@@ -43,11 +43,11 @@
             </div>
             <div style="margin-bottom: 15px; display: flex; align-items: center;">
                 <i class="fas fa-phone" style="color: goldenrod; width: 20px;"></i>
-                <p style="margin-left: 10px;">+91 8929930303</p>
+                <p style="margin-left: 10px;">+91 8929930303,+91 6006372451 </p>
             </div>
             <div style="margin-bottom: 15px; display: flex; align-items: center;">
                 <i class="fas fa-envelope" style="color: goldenrod; width: 20px;"></i>
-                <p style="margin-left: 10px;">info@nostrumdreamspaces.com</p>
+                <p style="margin-left: 10px;">info.nostrumdreamspaces.com</p>
             </div>
             <div style="display: flex; align-items: center;">
                 <i class="fas fa-clock" style="color: goldenrod; width: 20px;"></i>
