--- a/views/index.ejs
+++ b/views/index.ejs
@@ -64,7 +64,7 @@
                     <span id="brand-name" style="color: goldenrod;" class="text-xl font-bold opacity-0">Nostrum Dream
                         Spaces</span>
                 </div>
-                <button id="menu-btn" class="lg:hidden text-3xl focus:outline-none" style="color: goldenrod;">
+                <button id="menu-btn" class="text-3xl focus:outline-none" style="color: goldenrod;">
                     ☰
                 </button>
                 <div id="menu"
